--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,9 @@
 services:
   - type: web
     name: kenaz-backend
-    runtime: python
+    env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
+    startCommand: gunicorn server:app
+    envVars:
+      - key: PERPLEXITY_API_KEY
+        sync: false
