--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-flask==3.0.0
-flask-cors==4.0.0
+Flask==3.0.3
+flask-cors==4.0.1
 requests==2.31.0
-gunicorn==21.2.0
-```
+gunicorn==22.0.0
+Werkzeug==3.0.3
 
-#### 📄 `Procfile`
-```
-web: gunicorn server:app
