--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: kenaz-backend
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn server:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PERPLEXITY_API_KEY
         sync: false
